feat: implement pagination, service integration and film batch API
- common-lib: Add API for Pagination and PageRequest/PageResponse DTOs
- common-lib: Add BOOKING_SERVICE_ERROR error code
- user-service: Migrate staff/manager search to offset pagination
- showtime-service: Integrate booking-service REST check before updating/deleting showtime
- showtime-service: Add GET /api/showtimes/{id} API
- film-service: Add POST /api/films/batch API for client-side API composition
- docs: Rewrite and update README.md with comprehensive technical architectures